--- a/Make Images Mobile Responsive.html
+++ b/Make Images Mobile Responsive.html
@@ -34,8 +34,8 @@
 
   <p>Click here for <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img class="img-responsive" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
-  <img class="smaller-image thick-green-border" src="https://bit.ly/fcc-running-cats" alt="A cute orange cat lying on its back.">
+  <a href="#"><img class="" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+  <img class="img-responsive" src="https://bit.ly/fcc-running-cats" alt="A cute orange cat lying on its back.">
   </a>
 
   <p>Things cats love:</p>
